# auth-axum

./: .env.example  .example.fish  .gitignore  Cargo.toml  compose.yaml
config/: development.yaml
migrations/: 20251101080738_init.down.sql  20251101080738_init.up.sql
src/: app.rs  context.rs  lib.rs
src/config/: auth.rs  db.rs  log.rs  mod.rs
src/controllers/: auth.rs
src/error/: mod.rs
src/middlewares/: auth.rs  error.rs  mod.rs  refresh.rs
src/models/: error.rs  mod.rs  token.rs  users.rs
