[package]
name = "axum-auth"
version = "0.1.0"
edition = "2024"

[lib]
name = "auth"
path = "src/lib.rs"

[[bin]]
name = "auth"
path = "src/bin/main.rs"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
color-eyre = "0.6.5"
config = { version = "0.15.18", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "serde", "tracing", "json"] }
