[package]
name = "axum-auth"
version = "0.1.0"
edition = "2024"

[lib]
name = "auth"
path = "src/lib.rs"

[[bin]]
name = "auth"
path = "src/bin/main.rs"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.6", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
color-eyre = "0.6.5"
config = { version = "0.15.18", features = ["yaml"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "serde", "tracing", "json"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
